syntax = "proto3";

option go_package = "github.com/linuxsuren/api-testing/pkg/server";

package server;

import "google/api/annotations.proto";

service Runner {
    rpc Run (TestTask) returns (HelloReply) {}
    rpc Sample(Empty) returns (HelloReply) {}
    rpc GetVersion(Empty) returns (HelloReply) {
     option (google.api.http) = {
       get: "/v1/example/echo"
       body: "*"
     };
    }
    rpc Suite(Empty) returns (Suite) {}
}

message TestTask {
    string data = 1;
    string kind = 2;
    string caseName = 3;
    string level = 4;
    map<string, string> env = 5;
}

message TestTask {
    string data = 1;
    string kind = 2;
    string caseName = 3;
    string level = 4;
    map<string, string> env = 5;
}

message HelloReply {
  string message = 1;
  string error = 2;
}

message Suite {
  string name = 1;
  string api = 2;
  []TestCase items = 3;
}

message TestCase {
  string name = 1;
}

message Empty {
}
